CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/PerfilesSeguridad__mdt.object-meta.xml
<CustomObject>
    <label>PerfilesSeguridad</label>
    <pluralLabel>PerfilesSeguridad</pluralLabel>
</CustomObject>