CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/fields/Actualiza_Datos__c.field-meta.xml
<CustomField>
    <fullName>Actualiza_Datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualiza Datos</label>
    <type>Checkbox</type>
</CustomField>