CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/fields/Crea_Clave__c.field-meta.xml
<CustomField>
    <fullName>Crea_Clave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crea Clave</label>
    <type>Checkbox</type>
</CustomField>