CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/fields/Id_Perfil__c.field-meta.xml
<CustomField>
    <fullName>Id_Perfil__c</fullName>
    <label>Id Perfil</label>
    <length>30</length>
    <type>Text</type>
</CustomField>