CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/fields/Nombre_Perfil__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Perfil__c</fullName>
    <description>Nombre del perfil</description>
    <label>Nombre Perfil</label>
    <length>100</length>
    <type>Text</type>
</CustomField>