CNSDEVCOLECT/force-app/main/default/objects/PerfilesSeguridad__mdt/fields/Pide_huella__c.field-meta.xml
<CustomField>
    <fullName>Pide_huella__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pide huella</label>
    <type>Checkbox</type>
</CustomField>